[package]
name = "remote-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "time", "serde_json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "local-offset"]}
awc = { version = "3.1", features = ["rustls"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
